# gpu-server-test-suite

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
config/: test_config.yaml
config/grafana/dashboards/: gpu-diagnostics.json
config/grafana/provisioning/dashboards/: default.yml
config/profiles/: a100_80gb.yaml  h100_sxm.yaml  rtx_5070ti.yaml
config/prometheus/: alerts.yml  prometheus.yml
docs/: dashboard.html  gpu_diagnostic_framework.py
reports/: .run_history.jsonl
scripts/: generate_demo.py  gif_metrics_server.py
src/: __init__.py  main.py
src/database/: __init__.py
src/diagnostics/: __init__.py  clock_throttle.py  compute_stress.py  deployment.py  ecc_health.py  gpu_cleanup.py  gpu_health.py  memory_bandwidth.py  memory_test.py  nccl_validation.py  nvlink_p2p.py  pcie_bandwidth.py  pcie_validation.py  power_test.py  sm_stress.py  topology_map.py  xid_errors.py
src/fault_injection/: __init__.py
src/inventory/: __init__.py  gpu_inventory.py  pcie_topology.py  system_info.py
src/monitoring/: __init__.py
src/reporting/: __init__.py  history.py  junit_xml.py  models.py  prometheus.py  test_runner.py
tests/: conftest.py  test_bandwidth.py  test_cli.py  test_deployment.py  test_fault_injection.py  test_gpu_health.py  test_history.py  test_interconnect.py  test_memory_test.py  test_pcie_validation.py  test_pcie_validation_diag.py  test_production.py  test_run_levels.py  test_runner.py  test_stress.py  test_telemetry.py
