[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-server-test-suite"
version = "1.0.0"
description = "GPU server diagnostic test suite modeled on NVIDIA DCGM architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Tremayne Timms"},
]
dependencies = [
    "pynvml>=12.0.0,<14.0.0",
    "psutil>=5.9.0,<8.0.0",
    "click>=8.1.0,<9.0.0",
    "pyyaml>=6.0,<7.0",
    "rich>=13.0.0,<15.0.0",
    "torch>=2.10.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
    "pytest-cov>=4.1.0",
    "ty>=0.0.1",
]

[project.scripts]
gpu-diag = "src.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
